Add "sync key count for existing account" endpoint
